# MultiView-Pose-Predictive-Ballistics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
apps/assessment_calibration/: run_cal_check.sh  run_pre_session_check.sh
apps/athlete_assessment/: README.md  record_joints_udp.sh  run_live_trainer.sh  run_offline_assessment.sh
configs/: README.md
configs/calibration/: verification_targets.yaml
configs/exercises/: football_academy_u10.yaml
configs/projector/: homography.json
data/: README.md
data/raw/: athlete_001_squat_clean.jsonl  athlete_001_squat_good.jsonl  athlete_001_squat_valgus.jsonl  athlete_001_tpose.jsonl
data/reports/: athlete_001_pre_session_calibration.json  athlete_001_squat_clean_report.c3d  athlete_001_squat_clean_report.html  athlete_001_squat_clean_report.json  athlete_001_squat_good_report.c3d  (+8 more)
docs/: architecture.md  hardware_proposal_one_pager.md  month_0_accomplishments_one_pager.md  repository_portfolio_notes.md
firmware/: control_12_full.ino
scripts/: coverage_breakdown.py  draw_camera_layout_diagram.py  render_coverage_heatmap.py  visualize_camera_coverage.py
tests/: test_assessment_kairat_hardening.py  test_assessment_mvp.py  test_assessment_tier1.py  test_ballistics.py  test_c3d_export.py  test_event_log.py  test_kalman.py  test_leg_priors.py  test_live_coach_overlay.py  test_live_trainer.py  test_movement_quality_severity.py  test_pushup_ankle_fallback.py  test_safety_gates.py  test_static_grid_goal_detector.py  test_threshold_regression.py  test_triangulation.py
(+32 files in other folders)
